# smv

./: .gitignore  404.html  BUGS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  MANUAL.md  README.md  bugs.md  changelog.html  command_philosophy.md  featurewishlist.md  index.html  print.html  readme.md  roadmap.html  searchindex.js  searchindex.json  smv.1
.archive/: CONTRIBUTING.md  PROJECT_STANDARDS.md  README.md  archive_implementation_plan.md  brainstorming.txt  pipeline_examples.md  roadmap.md
.archive/.cargo/: config.toml
.archive/docs/: DOCUMENTATION.md
.archive/docs/dev/: design.md
.archive/docs/man/: smv.1
.archive/examples/: transformation_trait.rs
.archive/github/.github/ISSUE_TEMPLATE/: feature_request.md
.archive/github/.github/workflows/: ci.yml  release.yml
.archive/scripts/: release.sh
.archive/tests/: transformations.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  mdbook.yml  release.yml
advanced/: configuration.html  custom.html  regex.html  troubleshooting.html
development/: architecture.html  contributing.html  project-structure.html
docs/: BUILD_ISSUES.md  DEVELOPMENT_PLAN.md  book.toml  conf.py  feature-branch-context.md  index.rst  intent-based-cli-design.md  requirements.txt  session-2025-05-15-improvements.md  session-2025-06-28-improvements.md  session-summary.md  smv.1  tui_queue_feature.md
docs/grammar/: CNP-CLI Philosophy.md  CNP-Filter Grammar.md  CNP-Keyword Routing.md
docs/source/: ROADMAP.md
docs/source/commands/: file-operations.md  overview.md  transformations.md
docs/source/features/: cnp-filters.md  overview.md  repl-mode.md  tui-mode.md
docs/source/getting-started/: basic-usage.md  installation.md  quick-start.md
docs/source/grammar/: cnp-philosophy.md  filter-grammar.md
docs/source/reference/: examples.md  flag-reference.md
docs/src/: SUMMARY.md  changelog.md  introduction.md
features/: batch.html  overview.html  preview.html  transformations.html  undo.html
getting-started/: basic-usage.html  installation.html  quick-start.html
guide/: command-line.html  interactive-repl.html  terminal-ui.html  transformations.html
inspiration/: basename_sorter.py  sanitize_filenames-README.md
src/: cnp_grammar.rs  file_ops.rs  history.rs  lib.rs  main.rs  repl.rs  sort.rs  transformers.rs  unsort.rs
src/cli/: mod.rs
src/core/: mod.rs
src/transformers/: basic.rs  mod.rs
src/ui/: mod.rs  theme.rs
src/ui/input/: commands.rs  keymap.rs  mod.rs  vim.rs
src/ui/terminal/: app.rs  mod.rs  tui.rs
src/ui/terminal/views/: file_explorer.rs  mod.rs  preview_view.rs  queue_view.rs
src/ui/terminal/widgets/: file_item_widget.rs  mod.rs
src/ui/tests/: mod.rs
tests/: cli_parsing_tests.rs  cli_tests.rs  file_operations_tests.rs  file_ops_tests.rs  history_tests.rs  sort_unsort_tests.rs
theme/: custom.css
