[package]
name = "smv"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Smart Move - An enhanced mv command with transformation capabilities"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/smv"
keywords = ["cli", "files", "rename", "mv", "utility"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "smv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
regex = "1.9"
walkdir = "2.4"
deunicode = "1.3"
dirs = "5.0"
rustyline = "12.0"
glob = "0.3"
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
