[package]
name = "smv"
version = "0.1.0"
edition = "2021"
authors = ["Justin Wayne Liles <jwliles@outlook.com>"]
description = "Smart Move - An enhanced mv command with transformation capabilities"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jwliles/smv"
keywords = ["cli", "files", "rename", "mv", "utility"]
categories = ["command-line-utilities", "filesystem"]
rust-version = "1.85.0"

[[bin]]
name = "smv"
path = "src/bin/smv.rs"

[lib]
name = "smv"
path = "src/lib.rs"

[dependencies]
clap = "3.1.0"
colored = "2.0.0"
regex = "1.5.0"
walkdir = "2.3.0"
dirs = "4.0.0"
glob = "0.3.0"
once_cell = "1.9.0"
chrono = "0.4.19"
serde = "1.0.136"
serde_json = "1.0.79"

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true