[package]
name = "smv"
version = "0.4.0"
edition = "2021"
authors = ["Justin Wayne Liles <jwliles@outlook.com>"]
description = "Smart Move - An enhanced mv command with transformation capabilities"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jwliles/smv"
keywords = ["cli", "files", "rename", "mv", "utility"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "smv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
regex = "1.9"
walkdir = "2.4"
deunicode = "1.3"
dirs = "5.0"
rustyline = "12.0"
glob = "0.3"
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ratatui = "0.26.1"
crossterm = "0.27.0"
skim = "0.10.4"
anyhow = "1.0"
thiserror = "1.0"
atty = "0.2"
dsc-rs = { path = "../dsc-rs" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "minwindef", "winnt"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
